--- a/SIoTGateway/Infrastructure.Classic/packages.config
+++ b/SIoTGateway/Infrastructure.Classic/packages.config
@@ -14,14 +14,19 @@
   <package id="Microsoft.Azure.Amqp" version="1.1.5" targetFramework="net451" />
   <package id="Microsoft.Azure.Devices" version="1.0.13" targetFramework="net451" />
   <package id="Microsoft.Azure.Devices.Client" version="1.0.16" targetFramework="net451" />
+  <package id="Microsoft.Azure.DocumentDB" version="1.6.3" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net451" />
   <package id="Mono.Security" version="3.2.3.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
-  <package id="PCLCrypto" version="1.0.86" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="net451" />
+  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="net451" />
+  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="net451" />
+  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="net451" />
+  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net451" />
-  <package id="Validation" version="2.0.6.15003" targetFramework="net451" />
+  <package id="Validation" version="2.2.8" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="net451" />
 </packages>
